--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </a>
         </div>
 
-        <div id="fh5co-couple" class="fh5co-section-gray">
+        <div id="welcome" class="fh5co-section-gray">
             <div class="container container-max-width-970">
                 <div class="row flex-row" style="column-gap: 15px">
                     <!-- <div class="col-sm-1"></div> -->
@@ -327,7 +327,7 @@
             </div>
         </div>
 
-        <div id="fh5co-testimonial">
+        <div id="testimonials">
             <div class="container">
                 <div class="row">
                     <div class="row animate-box">
@@ -422,21 +422,14 @@
                                             <span>Alex & Sarah</span>
                                             <blockquote>
                                                 <p>
-                                                    Forrest randomly approached us one evening at the beach and wanted
-                                                    to take some shots of us for free so he could practice his already
-                                                    great
-                                                    skill. That night he sent them to me and they were phenomenal.
-                                                </p>
-                                                <p>
-                                                    The universe blessed us with a wonderful energetic photographer
-                                                    because it just so happens I was planning a proposal in the near
-                                                    future. We
-                                                    communicated and discussed on how it was all going to go down and
+                                                    The universe blessed us with a wonderful, energetic, photographer
+                                                    for our engagment photos. We communicated and discussed on how it
+                                                    was going to go down and
                                                     even visited the location beforehand.
                                                 </p>
                                                 <p>
                                                     That evening was magical for both of us including Forrest. I'm very
-                                                    glad I had met him that night down at the beach because he made this
+                                                    glad I had the chance to meet him because he made this
                                                     proposal perfect and did an incredible job capturing the moment. I
                                                     can't thank him enough!
                                                 </p>
@@ -586,66 +579,8 @@
             </div>
         </div>
 
-        <!-- Timeline!  ------------------------------- -->
-        <!-- <div id="fh5co-couple-story">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                            <span>The Wedding Experience</span>
-                            <h2>Timeline</h2>
-                            <p>Text</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 col-md-offset-0">
-                            <ul class="timeline animate-box">
-                                <li class="animate-box">
-                                    <div class="timeline-badge" style="background-image: url(images/couple-1.jpg)"></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">First We Meet</h3>
-                                            <span class="date">Virtual Chat or In-Person meet up! Let's grab coffee :)</span>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>I want to get to know you. I belive it's so important to get to know the couple ahead of time...</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="timeline-inverted animate-box">
-                                    <div class="timeline-badge" style="background-image: url(images/couple-2.jpg)"></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">Engagement Session</h3>
-                                            <span class="date">Build a connection</span>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>
-                                                Engagement sessions are offered at no additional cost. These allow us to build a relationship before your special day. Your wedding should only have
-                                                friends and family, so this is my chance to become friends with you guys!
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="animate-box">
-                                    <div class="timeline-badge" style="background-image: url(images/couple-3.jpg)"></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">Your Special Day</h3>
-                                            <span class="date">I'm commited to capturing visuals all day long</span>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Send me your schedule...</p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
         <!-- Insta Callout -->
-        <div id="fh5co-started" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
+        <div id="insta-callout" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
             <div class="overlay"></div>
             <div class="animate-box">
                 <div include-html="callout_insta.html"></div>
