--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,9 @@
 
                             <div class="row form-group">
                                 <div class="col-md-12">
-                                    <label for="instagram">Instagram — Let's follow each other!</label>
+                                    <label for="instagram">Instagram — Let's follow each other! Mine's <a
+                                            href="https://www.instagram.com/forrestherman/"
+                                            target="_blank">@forrestherman.ca</a> :)</label>
                                     <input type="text" id="instagram" name="instagram" class="form-control"
                                         placeholder="@your-instagram-handle" />
                                 </div>
