fix insta banner hangout

--- a/contact.html
+++ b/contact.html
@@ -219,7 +219,7 @@
                             <div class="row form-group">
                                 <div class="col-md-12">
                                     <label for="instagram">Instagram — Let's follow each other! Mine's <a
-                                            href="https://www.instagram.com/forrestherman/"
+                                            href="https://www.instagram.com/forrestherman.ca/"
                                             target="_blank">@forrestherman.ca</a> :)</label>
                                     <input type="text" id="instagram" name="instagram" class="form-control"
                                         placeholder="@your-instagram-handle" />
@@ -365,7 +365,7 @@
             </script> -->
 
         <!-- Insta Callout -->
-        <div id="fh5co-started" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
+        <div id="insta-callout" class="fh5co-bg banner" style="background-image: url(img/instagram_banner_3.jpg)">
             <div class="overlay"></div>
             <div class="animate-box">
                 <div include-html="callout_insta.html"></div>
