--- a/footer.html
+++ b/footer.html
@@ -72,7 +72,7 @@
                 <div>
                     <ul class="fh5co-social-icons">
                         <li>
-                            <a href="https://www.instagram.com/forrestherman/" target="_blank"><i
+                            <a href="https://www.instagram.com/forrestherman.ca/" target="_blank"><i
                                     class="fab fa-instagram"></i></a>
                         </li>
                         <li>
