--- a/about.html
+++ b/about.html
@@ -151,11 +151,12 @@
                         <!-- <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p> -->
                         <p>
                             I love nature, road trips, and standing on the ocean coast with salt in the air and the
-                            caress of a breeze on your face. And most of all, I love creating visuals with
+                            caress of a breeze on your face. And most of all, I love creating visuals and marking
+                            memories with
                             my camera in hand.
                         </p>
                         <p>
-                            I’m also a storyteller, and I want to tell your story as unique-to-you as possible. If
+                            I’m a storyteller, and I want to tell your story as unique-to-you as possible. If
                             you’re not as comfortable posing in front of the camera — that’s fine! Let’s find
                             an activity you love, and capture candid pictures instead. Everyone has something that makes
                             them smile, makes them laugh. For me, photography is about capturing people
