--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
 
     <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -113,7 +113,7 @@
                     <div class="col-xs-2 col-nav">
                         <div id="fh5co-logo">
                             <a href="index">
-                                <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
+                                <img id="logo" src="/img/forrest-herman-white.png" alt="logo" />
                             </a>
                         </div>
                     </div>
