--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -43,24 +43,24 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Animate.css -->
-    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="../css/animate.css" />
     <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="css/icomoon.css" />
+    <link rel="stylesheet" href="../css/icomoon.css" />
     <!-- Bootstrap  -->
-    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/bootstrap.css" />
 
     <!-- Magnific Popup -->
-    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link rel="stylesheet" href="/css/magnific-popup.css" />
 
     <!-- Owl Carousel  -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="/css/owl.theme.default.min.css" />
 
     <!-- Theme style  -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
+    <script src="../js/modernizr-2.6.2.min.js"></script>
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -96,7 +96,7 @@
                     <div class="col-xs-2 col-nav">
                         <div id="fh5co-logo">
                             <a href="index">
-                                <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
+                                <img id="logo" src="/img/forrest-herman-black.png" alt="logo" />
                             </a>
                         </div>
                     </div>
@@ -126,15 +126,13 @@
 
         <div class="container nav-spacer"></div>
         <div id="fh5co-gallery">
-            <!-- class="fh5co-section-gray" -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span>Portraits</span>
+                        <span>Individual Portraits</span>
                         <h2 class="portfolio">Portfolio</h2>
                         <!-- <p>
-                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                                there live the blind texts.
+                                Here are some images.
                             </p> -->
                     </div>
                 </div>
@@ -143,7 +141,7 @@
                     <div class="row gallery">
                         <div class="wrapper-3-col animate-box">
                             <!-- col 1 -->
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" />
+                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_031.jpg" alt="" />
                             </div>
@@ -179,7 +177,7 @@
                             <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_041.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_048.jpg" alt="" />
-                            </div>
+                            </div> -->
 
                             <!-- individual -->
                             <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" />
@@ -191,7 +189,7 @@
 
                             <!-- col 2 -->
 
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" />
+                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_030.jpg" alt="" />
                             </div>
@@ -227,9 +225,8 @@
                             <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_037.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_047.jpg" alt="" />
-                            </div>
+                            </div> -->
 
-                            <!-- individual -->
                             <div class="portfolio-img-container order-md-18"><img src="/img/Portfolio_005.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" />
@@ -238,7 +235,7 @@
                             </div>
 
                             <!-- col 3 -->
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" />
+                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_032.jpg" alt="" />
                             </div>
@@ -274,9 +271,8 @@
                             <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_031.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_051.jpg" alt="" />
-                            </div>
+                            </div> -->
 
-                            <!-- individual -->
                             <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_045.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_004.jpg" alt="" />
@@ -286,29 +282,13 @@
                         </div>
                     </div>
 
-                    <div class="row gallery">
+                    <!-- <div class="row gallery">
                         <div class="wrapper-col animate-box">
                             <div class="portfolio-img-container order-md-22"><img src="/img/landscape_019.jpg" alt="" />
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                <span>
-                    <h4>Interested in my individual portrait work?</h4>
-                </span>
-                <div class="btn-container btn-border-black display-flex-row justify-center">
-                    <a class="btn margin-right-left-10" href="portraits-solo">Explore Solo Portraits</a>
-                    <a class="btn margin-right-left-10" href="about">Let's Chat!</a>
-                    <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
-                </div>
-                <!-- <p>
-                    I also take a lot of landscapes in my free time!
-                </p> -->
             </div>
         </div>
 
@@ -331,26 +311,26 @@
     </div>
 
     <!-- jQuery -->
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <!-- jQuery Easing -->
-    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="../js/jquery.easing.1.3.js"></script>
     <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- Waypoints -->
-    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="../js/jquery.waypoints.min.js"></script>
     <!-- Carousel -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
     <!-- countTo -->
-    <script src="js/jquery.countTo.js"></script>
+    <script src="../js/jquery.countTo.js"></script>
 
     <!-- Stellar -->
-    <script src="js/jquery.stellar.min.js"></script>
+    <script src="../js/jquery.stellar.min.js"></script>
     <!-- Magnific Popup -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/magnific-popup-options.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/magnific-popup-options.js"></script>
 
     <!-- Main -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
     <!-- Bring in Html elements -->
     <script>
         includeHTML()
