solo portraits page

--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -141,139 +141,26 @@
                     <div class="row gallery">
                         <div class="wrapper-3-col animate-box">
                             <!-- col 1 -->
-                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_013.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_031.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/landscape_014.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_021.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_009.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_059.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_024.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/landscape_004.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" />
-                            </div>
 
-                            <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_010.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_030.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-11"><img src="/img/Portfolio_036.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-14"><img src="/img/Portfolio_035.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_041.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_048.jpg" alt="" />
-                            </div> -->
-
-                            <!-- individual -->
                             <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" />
                             </div>
-                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" />
+                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" />
                             </div>
 
                             <!-- col 2 -->
 
-                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_014.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_030.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/landscape_010.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_005.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_029.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-3"><img src="/img/portrait_008.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_019.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-3"><img src="/img/landscape_003.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-5"><img src="/img/portrait_002.jpg" alt="" />
-                            </div>
-
-                            <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-9"><img src="/img/Portfolio_027.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-12"><img src="/img/Portfolio_034.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_043.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_037.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_047.jpg" alt="" />
-                            </div> -->
-
                             <div class="portfolio-img-container order-md-18"><img src="/img/Portfolio_005.jpg" alt="" />
                             </div>
-                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" />
+                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" />
                             </div>
 
                             <!-- col 3 -->
-                            <!-- <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_032.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-1"><img src="/img/portrait_018.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/landscape_018.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_007.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_023.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-2"><img src="/img/portrait_025.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-3"><img src="/img/landscape_001.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" />
-                            </div>
 
-                            <div class="portfolio-img-container order-md-3"><img src="/img/portrait_003.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg"
-                                    alt="" /></div>
-                            <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-13"><img src="/img/Portfolio_038.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_028.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_031.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_051.jpg" alt="" />
-                            </div> -->
-
-                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_045.jpg" alt="" />
+                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_085.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_004.jpg" alt="" />
                             </div>
@@ -289,6 +176,22 @@
                         </div>
                     </div> -->
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                <span>
+                    <h4>Check out my wedding and couple portrait work!</h4>
+                </span>
+                <div class="btn-container btn-border-black display-flex-row justify-center">
+                    <a class="btn margin-right-left-10" href="photos">Weddings and Couples</a>
+                    <a class="btn margin-right-left-10" href="about">Let's Chat!</a>
+                    <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
+                </div>
+                <!-- <p>
+                    I also take a lot of landscapes in my free time!
+                </p> -->
             </div>
         </div>
 
