--- a/photos.html
+++ b/photos.html
@@ -163,7 +163,6 @@
                             </div>
                             <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" />
                             </div>
-
                             <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" />
@@ -176,17 +175,9 @@
                             </div>
                             <div class="portfolio-img-container order-md-14"><img src="/img/Portfolio_035.jpg" alt="" />
                             </div>
-                            <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_041.jpg" alt="" />
+                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_045.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_048.jpg" alt="" />
-                            </div>
-
-                            <!-- individual -->
-                            <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" />
                             </div>
 
                             <!-- col 2 -->
@@ -211,7 +202,6 @@
                             </div>
                             <div class="portfolio-img-container order-md-5"><img src="/img/portrait_002.jpg" alt="" />
                             </div>
-
                             <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" />
@@ -229,13 +219,7 @@
                             <div class="portfolio-img-container order-md-15"><img src="/img/Portfolio_047.jpg" alt="" />
                             </div>
 
-                            <!-- individual -->
-                            <div class="portfolio-img-container order-md-18"><img src="/img/Portfolio_005.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" />
-                            </div>
+                            <br>
 
                             <!-- col 3 -->
                             <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" />
@@ -258,11 +242,11 @@
                             </div>
                             <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" />
                             </div>
-
                             <div class="portfolio-img-container order-md-3"><img src="/img/portrait_003.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg"
-                                    alt="" /></div>
+                                    alt="" />
+                            </div>
                             <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" />
                             </div>
                             <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" />
@@ -276,13 +260,9 @@
                             <div class="portfolio-img-container order-md-16"><img src="/img/Portfolio_051.jpg" alt="" />
                             </div>
 
-                            <!-- individual -->
-                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_045.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_004.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_002.jpg" alt="" />
-                            </div>
+                            <!-- Bonus -->
+
+
                         </div>
                     </div>
 
