--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -186,7 +186,7 @@
                 </span>
                 <div class="btn-container btn-border-black display-flex-row justify-center">
                     <a class="btn margin-right-left-10" href="photos">Weddings and Couples</a>
-                    <a class="btn margin-right-left-10" href="about">Let's Chat!</a>
+                    <a class="btn margin-right-left-10" href="contact">Let's Chat!</a>
                     <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
                 </div>
                 <!-- <p>
