--- a/photos.html
+++ b/photos.html
@@ -283,7 +283,7 @@
                 </span>
                 <div class="btn-container btn-border-black display-flex-row justify-center">
                     <a class="btn margin-right-left-10" href="portraits-solo">Explore Solo Portraits</a>
-                    <a class="btn margin-right-left-10" href="about">Let's Chat!</a>
+                    <a class="btn margin-right-left-10" href="contact">Let's Chat!</a>
                     <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
                 </div>
                 <!-- <p>
