--- a/index.html
+++ b/index.html
@@ -482,7 +482,10 @@
                                     retouched digital images, an online gallery and an
                                     unlimited print release. Contact me for a custom quote.
                                 </p>
-                                <p><a href="offerings#wedding-elopement">Explore packages</a></p>
+                                <p><a href="offerings#wedding-elopement">Explore packages</a>
+                                    &nbsp; &nbsp; &nbsp;
+                                    <a href="photos">Explore Portfolio</a>
+                                </p>
                             </div>
                         </div>
 
@@ -513,7 +516,11 @@
                                     offer select wedding film packages, allowing you relive these special moments again
                                     and again and to share your day with those who couldn't make it.
                                 </p>
-                                <p><a href="offerings">Explore packages</a></p>
+                                <p>
+                                    <a href="offerings">Explore packages</a>
+                                    &nbsp; &nbsp; &nbsp;
+                                    <a href="films">Explore Portfolio</a>
+                                </p>
                             </div>
                         </div>
                         <div class="feature-left animate-box order-4" data-animate-effect="fadeInLeft">
