--- a/offerings.html
+++ b/offerings.html
@@ -176,7 +176,8 @@
                             about a custom quote, please inquire below.
                         </p>
                         <div class="btn-container btn-border-black display-flex-row justify-center">
-                            <a class="btn" href="/contact">Inquire Here</a>
+                            <a class="btn margin-right-left-10" href="/contact">Inquire Here</a>
+                            <a class="btn margin-right-left-10" href="/photos">View Portfolio</a>
                         </div>
                     </div>
                 </div>
