fix buttons side-by-side mobile

--- a/photos.html
+++ b/photos.html
@@ -281,7 +281,7 @@
                 <span>
                     <h4>Interested in my individual portrait work?</h4>
                 </span>
-                <div class="btn-container btn-border-black display-flex-row justify-center">
+                <div class="btn-container btn-border-black justify-center">
                     <a class="btn margin-right-left-10" href="portraits-solo">Explore Solo Portraits</a>
                     <a class="btn margin-right-left-10" href="contact">Let's Chat!</a>
                     <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
