--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -184,7 +184,7 @@
                 <span>
                     <h4>Check out my wedding and couple portrait work!</h4>
                 </span>
-                <div class="btn-container btn-border-black display-flex-row justify-center">
+                <div class="btn-container btn-border-black justify-center">
                     <a class="btn margin-right-left-10" href="photos">Weddings and Couples</a>
                     <a class="btn margin-right-left-10" href="contact">Let's Chat!</a>
                     <!-- <a class="btn margin-right-left-10" href="landscapes">Check out my landscapes</a> -->
