update section margins below images

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                 </div> -->
         </header>
 
-        <div class="row fh5co-section">
+        <div class="row fh5co-section below-image">
             <div class="container">
                 <div class="row no-margin">
                     <div
