--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
             </div>
         </header>
 
-        <div class="fh5co-section">
+        <div class="fh5co-section below-image">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 animate-box">
