update alert bar animation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://www.forrestherman.ca/" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
     <meta property="og:description"
-        content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
+        content="I'm a wedding photographer and filmmaker based in North Bay and Hamilton, ON. Capturing moments and memories. Weddings, engagements, events." />
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="img/share-img-2.jpg" />
     <meta name="twitter:url" content="" />
