--- a/contact.html
+++ b/contact.html
@@ -151,8 +151,11 @@
                             <h3>Contact Information</h3>
                             <ul>
                                 <li class="address">
-                                    <p><a href="https://goo.gl/maps/WEJMCZGMTFSxvZ5Y6" target="_blank">North Bay &
-                                            Hamilton, Ontario</a></p>
+                                    <p class="accent-color"><a href="https://goo.gl/maps/WEJMCZGMTFSxvZ5Y6"
+                                            target="_blank">North Bay</a> &
+                                        <a href="https://goo.gl/maps/n9pwpyn9XFhgmfWq6" target="_blank">Hamilton,
+                                            Ontario</a>
+                                    </p>
                                 </li>
                                 <li class="phone">
                                     <p><a href="tel://7052032534">(705) 203-2534</a></p>
