--- a/portraits-solo.html
+++ b/portraits-solo.html
@@ -13,18 +13,15 @@
     <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
     <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"
-        content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
-    <meta name="keywords"
-        content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
+    <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+    <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Photos - Forrest Herman - Wedding Photographer + Filmmaker" />
     <meta property="og:image" content="img/share-img-2.jpg" />
     <meta property="og:url" content="https://www.forrestherman.ca/" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
-    <meta property="og:description"
-        content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
+    <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
@@ -34,13 +31,9 @@
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="../css/animate.css" />
@@ -139,33 +132,16 @@
 
                 <div class="container">
                     <div class="row gallery">
-                        <div class="wrapper-3-col animate-box">
-                            <!-- col 1 -->
-
-                            <div class="portfolio-img-container order-md-17"><img src="/img/Portfolio_006.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" />
-                            </div>
-
-                            <!-- col 2 -->
-
-                            <div class="portfolio-img-container order-md-18"><img src="/img/Portfolio_005.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" />
-                            </div>
-
-                            <!-- col 3 -->
-
-                            <div class="portfolio-img-container order-md-19"><img src="/img/Portfolio_085.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_004.jpg" alt="" />
-                            </div>
-                            <div class="portfolio-img-container order-md-22"><img src="/img/Portfolio_002.jpg" alt="" />
-                            </div>
+                        <div class="wrapper-gallery animate-box">
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_006.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_005.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_085.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_016.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_008.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_004.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_058.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_017.jpg" alt="" /></div>
+                            <div class="portfolio-img-container animate-box"><img src="/img/Portfolio_002.jpg" alt="" /></div>
                         </div>
                     </div>
 
@@ -182,7 +158,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                 <span>
-                    <h4>Check out my wedding and couple portrait work!</h4>
+                    <h4 style="margin: 0 14px;">Check out my wedding and couple portrait work!</h4>
                 </span>
                 <div class="btn-container btn-border-black justify-center">
                     <a class="btn margin-right-left-10" href="photos">Weddings and Couples</a>
