--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <link rel="icon" href="img/favicon.png" id="light-scheme-icon" />
     <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description"
-        content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
-    <meta name="keywords"
-        content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
+    <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
+    <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
@@ -24,8 +22,7 @@
     <link rel="image_src" href="img/share-img-2.jpg" />
     <meta property="og:url" content="https://www.forrestherman.ca/" />
     <meta property="og:site_name" content="ForrestHerman.ca" />
-    <meta property="og:description"
-        content="I'm a wedding photographer and filmmaker based in North Bay and Hamilton, ON. Capturing moments and memories. Weddings, engagements, events." />
+    <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay and Hamilton, ON. Capturing moments and memories. Weddings, engagements, events." />
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="img/share-img-2.jpg" />
     <meta name="twitter:url" content="" />
@@ -36,13 +33,9 @@
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=DM+Serif+Display:ital@0;1&family=Fanwood+Text:ital@0;1&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Animate.css -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"/> -->
@@ -149,69 +142,52 @@
         <div id="heroslider" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel item active">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_006.jpg); background-position: 44% 60% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_006.jpg); background-position: 44% 60% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_001.jpg); background-position: 50% 17% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_001.jpg); background-position: 50% 17% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_008.jpg); background-position: 52% 70% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_008.jpg); background-position: 52% 70% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_005.jpg); background-position: 50% 10% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_005.jpg); background-position: 50% 10% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_009.jpg); background-position: 30% 70% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_009.jpg); background-position: 30% 70% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_016.jpg); background-position: 30% 50% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_016.jpg); background-position: 30% 50% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/Portfolio_068.jpg); background-position: 46% 10% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" data-stellar-background-ratio="0.5">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)"
-                        data-stellar-background-ratio="0.5">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_011.jpg); background-position: 50% 50% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_011.jpg); background-position: 50% 50% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_076.jpg); background-position: 50% 25% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
                 <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/Portfolio_076.jpg); background-position: 50% 25% !important">
-                        <div class="overlay-prep overlay-light"></div>
-                    </header>
-                </div>
-                <div class="carousel item">
-                    <header id="fh5co-header" class="fh5co-cover" role="banner"
-                        style="background-image: url(img/landscape_007.jpg); background-position: 50% 50% !important">
+                    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_007.jpg); background-position: 50% 50% !important">
                         <div class="overlay-prep overlay-light"></div>
                     </header>
                 </div>
@@ -248,8 +224,7 @@
                             <polygon points="0 0, 4 3.5, 0 7" fill="#fff" />
                         </marker>
                     </defs>
-                    <line x1="339" y1="50" x2="89" y2="50" stroke="#fff" stroke-width="8"
-                        marker-end="url(#arrowhead-left)" />
+                    <line x1="339" y1="50" x2="89" y2="50" stroke="#fff" stroke-width="8" marker-end="url(#arrowhead-left)" />
                 </svg>
                 <span class="sr-only">Previous</span>
             </a>
@@ -299,8 +274,7 @@
                         <img class="about-img" src="img/DundurnCastle_010.jpg" alt="" />
                     </div>
                     <!-- <div class="col-sm-1"></div> -->
-                    <div
-                        class="col-sm-6 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center fh5co-heading fh5co-heading-none black">
+                    <div class="col-sm-6 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center fh5co-heading fh5co-heading-none black">
                         <h2 style="font-family: DM Serif Display, serif; letter-spacing: 1px">Hey there, I'm Forrest!
                         </h2>
                         <p>My priority is to capture images that are authentic, candid, and full of life. Your portraits
@@ -343,8 +317,7 @@
                                     <div class="item">
                                         <div class="testimony-slide active text-center">
                                             <figure>
-                                                <img class="testimonial-img" style="object-position: center bottom"
-                                                    src="img/Katy&KevinIcon.jpg" alt="user" />
+                                                <img class="testimonial-img" style="object-position: center bottom" src="img/Katy&KevinIcon.jpg" alt="user" />
                                             </figure>
                                             <span>Katy & Kevin</span>
                                             <blockquote>
@@ -374,8 +347,7 @@
                                     <div class="item">
                                         <div class="testimony-slide active text-center">
                                             <figure>
-                                                <img class="testimonial-img" style="object-position: center 60%"
-                                                    src="img/testimonial_lori.jpg" alt="user" />
+                                                <img class="testimonial-img" style="object-position: center 60%" src="img/testimonial_lori.jpg" alt="user" />
                                             </figure>
                                             <span>Lori Burns</span>
                                             <blockquote>
@@ -399,8 +371,7 @@
                                     <div class="item">
                                         <div class="testimony-slide active text-center">
                                             <figure>
-                                                <img class="testimonial-img" style="object-position: center 50%"
-                                                    src="img/testimonial_robertson.jpg" alt="user" />
+                                                <img class="testimonial-img" style="object-position: center 50%" src="img/testimonial_robertson.jpg" alt="user" />
                                             </figure>
                                             <span>Tanja Robertson</span>
                                             <blockquote>
@@ -416,8 +387,7 @@
                                     <div class="item">
                                         <div class="testimony-slide active text-center">
                                             <figure>
-                                                <img class="testimonial-img" style="object-position: center center"
-                                                    src="img/landscape_004.jpg" alt="user" />
+                                                <img class="testimonial-img" style="object-position: center center" src="img/landscape_004.jpg" alt="user" />
                                             </figure>
                                             <span>Alex & Sarah</span>
                                             <blockquote>
